# revenue

./: .gitignore  .mise.toml  AGENTS.md  Brewfile  DETAILS.md  README.md  install.sh  renovate.json  revenue  setup.sh  tools.csv
.github/actions/setup-mise/: action.yml
.github/workflows/: _demo-ci.yml  demo-java-ktor.yml  demo-java-spring-boot.yml  demo-javascript-react.yml  demo-javascript-svelte.yml  demo-python-flask.yml  release-installer.yml  shellcheck.yml
amp_demos/: AGENTS.md  README.md  demo  demo.sh  pet-store.yaml
amp_demos/java/: .mise.toml
amp_demos/java/ktor/: .env  .gitignore  Procfile  README.md  Taskfile.yml  build.gradle.kts  demo.yaml  kls_database.db  settings.gradle.kts  start_demo.sh
amp_demos/java/spring-boot/: .env  .gitignore  Procfile  README.md  Taskfile.yml  build.gradle  demo.yaml  start_demo.sh
amp_demos/javascript/react/: .gitignore  .mise.toml  Procfile  README.md  Taskfile.yml  demo.yaml  index.html  package-lock.json  package.json  pnpm-lock.yaml  start_demo.sh  vite.config.js
amp_demos/javascript/react/src/: App.jsx  (+2 more)
amp_demos/javascript/svelte/: .mise.toml  Procfile  demo.yaml  package-lock.json  package.json  pnpm-lock.yaml  start_demo.sh  vite.config.ts
amp_demos/python/flask/: .mise.toml  Procfile  README.md  Taskfile.yml  config.py  demo.yaml  main.py  pyproject.toml  start_demo.sh
amp_demos/python/flask/app/: __init__.py  models.py  routes.py
amp_demos/python/flask/app/static/css/: common.css
amp_demos/python/flask/app/templates/: index.html  layout.html
amp_demos/shared/: common.css
amp_demos/shared/css/: adapter.css  base.css  common.css  map.css  tokens.css
installers/: brew.sh  curl.sh  system.sh  vscode_extensions.sh
lib/: bootstrap.sh  installer_registry.sh  utils.sh
(+20 files in other folders)
