[project]
name = "python-flask-demo"
version = "0.1.0"
description = "An application to demo using Amp with Python and Flask"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["flask>=3.0.0", "python-dotenv>=1.0.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-flask>=1.3.0", "black>=24.0.0", "flake8>=7.0.0"]

[project.scripts]
dev = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
